* Merging from Ubuntu: Raise an exception and exit when DBus is unavailable rather than crashing (LP: #139154)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ kdebluetooth (1:0.4.1-1) UNRELEASED; urgency=low
 
   * Imported upstream version 0.4.1
   * Change Homepage from SourceForge to KDE-Apps.org
+  * Merging from Ubuntu:
+    - Raise an exception and exit when DBus is unavailable rather than
+      crashing (LP: #139154)
   * Bump Standards-Version, no changes needed.
 
  -- Didier Raboud <didier@raboud.com>  Wed, 10 Feb 2010 09:55:11 +0100
