--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ kdebluetooth (1:0.4.1-1) UNRELEASED; urgency=low
   * Merging from Ubuntu:
     - Raise an exception and exit when DBus is unavailable rather than
       crashing (LP: #139154)
+  * Patches:
+    - Refresh kubuntu_01_document_path.diff
   * Bump Standards-Version, no changes needed.
 
  -- Didier Raboud <didier@raboud.com>  Wed, 10 Feb 2010 09:55:11 +0100
